--- a/03_GUI_Builder_dan_GitHub/modul3_2311104065/.gitignore
+++ b/03_GUI_Builder_dan_GitHub/modul3_2311104065/.gitignore
@@ -1,1 +1,19 @@
-.vs/ 
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.bak
+
+# NuGet
+packages/
+
+# build results
+[Dd]ebug/
+[Rr]elease/
+*.obj
+*.pdb
+*.exe
+*.dll
+
+# other
+*.log
